{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 73,
  "lineage": "7e6714f4-d901-642e-0e77-6259a5bcc55c",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http-allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9092",
                  "9093"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-02-16T10:19:24.472-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sohansm-project/global/firewalls/allow-http-9093",
            "log_config": [],
            "name": "allow-http-9093",
            "network": "https://www.googleapis.com/compute/v1/projects/sohansm-project/global/networks/kfk-vpc",
            "priority": 1000,
            "project": "sohansm-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sohansm-project/global/firewalls/allow-http-9093",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh-allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-02-16T10:19:24.312-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sohansm-project/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/sohansm-project/global/networks/kfk-vpc",
            "priority": 1000,
            "project": "sohansm-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sohansm-project/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "container-vm-example"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/cos-cloud/global/images/cos-stable-77-12371-89-0",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/sohansm-project/zones/us-central1-a/disks/kfk-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "container-vm": "cos-stable-77-12371-89-0"
            },
            "enable_display": false,
            "id": "projects/sohansm-project/zones/us-central1-a/instances/kfk-vm",
            "instance_id": "3683062359294941648",
            "label_fingerprint": "-1zcAa304Is=",
            "labels": {
              "container-vm": "cos-stable-77-12371-89-0"
            },
            "machine_type": "n1-standard-1",
            "metadata": {
              "gce-container-declaration": "\"spec\":\n  \"containers\":\n  - \"env\":\n    - \"name\": \"KAFKA_CFG_NODE_ID\"\n      \"value\": \"0\"\n    - \"name\": \"KAFKA_CFG_PROCESS_ROLES\"\n      \"value\": \"controller,broker\"\n    - \"name\": \"KAFKA_CFG_LISTENERS\"\n      \"value\": \"PLAINTEXT://:9092,CONTROLLER://0.0.0.0:9093,EXTERNAL://0.0.0.0:9094\"\n    - \"name\": \"KAFKA_CFG_ADVERTISED_LISTENERS\"\n      \"value\": \"PLAINTEXT://kafka:9092,EXTERNAL://:9094\"\n    - \"name\": \"K [...]
              "google-logging-enabled": "true",
              "google-monitoring-enabled": "true"
            },
            "metadata_fingerprint": "HVz8Lj6vrKs=",
            "name": "kfk-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.202.172.25",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/sohansm-project/global/networks/kfk-vpc",
                "network_ip": "10.10.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/sohansm-project/regions/us-central1/subnetworks/kfk-vpc-subnet",
                "subnetwork_project": "sohansm-project"
              }
            ],
            "project": "sohansm-project",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/sohansm-project/zones/us-central1-a/instances/kfk-vm",
            "service_account": [
              {
                "email": "kfk-service-account@sohansm-project.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "container-vm-example"
            ],
            "tags_fingerprint": "fHIXWKpF9LM=",
            "terraform_labels": {
              "container-vm": "cos-stable-77-12371-89-0"
            },
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet",
            "google_service_account.my_service_account",
            "module.gce-container.data.google_compute_image.coreos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/sohansm-project/global/networks/kfk-vpc",
            "mtu": 0,
            "name": "kfk-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "2113609664987076624",
            "project": "sohansm-project",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sohansm-project/global/networks/kfk-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-02-15T16:07:05.845-08:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/sohansm-project/regions/us-central1/subnetworks/kfk-vpc-subnet",
            "ip_cidr_range": "10.10.0.0/16",
            "name": "kfk-vpc-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/sohansm-project/global/networks/kfk-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "sohansm-project",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sohansm-project/regions/us-central1/subnetworks/kfk-vpc-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}